--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,10 @@
 :root
 {
     /* VARIABILI DIMENSIONALI */
-    --mode          : 0; 
-    --main_width    : 80vw;
-    --main_height   : 80vh;
+    --main_width            : 80vw;
+    --main_height           : 80vh;
+    /* --width_friends_side    : 0;
+    --width_chat_side       : 0; */
     /* VARIABILI CROMATICHE */
 }
 
@@ -14,3 +15,16 @@ main
     height: var(--main_height);
 }
 
+#friends_side
+{
+    /* flex-basis: calc(100% * var(--width_friends_side)); */
+    height: 100%;
+    background-color: whitesmoke;
+}
+
+#chat_side
+{
+    /* flex-basis: calc(100% * var(--width_chat_side)); */
+    height: 100%;
+    background-image: url(../img/mine.jpg);
+}
