--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,16 +15,47 @@ main
     height: var(--main_height);
 }
 
+#friends_side, #chat_side
+{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    border: 1px solid gray;
+}
+
 #friends_side
 {
     /* flex-basis: calc(100% * var(--width_friends_side)); */
-    height: 100%;
     background-color: whitesmoke;
 }
 
 #chat_side
 {
     /* flex-basis: calc(100% * var(--width_chat_side)); */
-    height: 100%;
     background-image: url(../img/mine.jpg);
+}
+
+.section_header
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-basis: 10%;
+    width: 100%;
+    background-color: lightgray;
+}
+
+.icons_set
+{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    list-style: none;
+    color: darkgray;
+}
+
+.icons_set i
+{
+    font-size: 1rem;
 }
