--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ main
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 8%;
+    height: 10vh;
     width: 100%;
     background-color: lightgray;
 }
@@ -64,7 +64,6 @@ main
 {
     display: flex;
     flex-direction: column;
-    gap: 5px;
     align-items: start;
 }
 
