--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,12 +120,11 @@ main
     height: 6vh;
 }
 
-#contat_list
+#contact_list
 {
     width: 100%;
     height: 78vh;
-    /* list-style: none; */
-    overflow-y: auto;
+    overflow: auto;
 }
 
 .contact
