--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,20 +117,20 @@ main
 #search_area
 {
     width: 100%;
-    height: 6vh;
+    flex-grow: 1;
 }
 
 #contact_list
 {
     width: 100%;
-    height: 78vh;
+    height: 65vh;
     overflow: auto;
 }
 
 .contact
 {
     width: 100%;
-    height: 10vh;
+    height: 12vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
