Error manager: ok

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,24 @@
     /* VARIABILI CROMATICHE */
 }
 
+#error_manager
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#error_message
+{
+    max-width: 50%;
+}
+
 main
 {
     width: var(--main_width);
