--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,3 +176,62 @@ main
 {
     color: white;
 }
+
+#chat_messages_area
+{
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.message
+{
+    max-width: 75%;
+    border: 1px solid black;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding: 10px;
+}
+
+.message span
+{
+    align-self: flex-end;
+    font-size: x-small;
+}
+
+.sent
+{
+    align-self: flex-start;
+    background-color: white;
+} 
+
+.received
+{
+    align-self: flex-end;
+    background-color: lightgreen;
+}
+
+#new_message_area
+{
+    width: 100%;
+    flex-grow: 1;
+    background-color: rgb(247, 232, 232);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#new_message_area i
+{
+    color: darkgrey;
+}
+
+#new_message_form
+{
+    width: 75%;
+    background-color: aquamarine;
+}
