--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,8 +230,14 @@ main
     color: darkgrey;
 }
 
+#back:hover
+{
+    cursor: pointer;
+}
+
 #new_message_form
 {
-    width: 75%;
+    max-width: 75%;
+    flex-grow: 1;
     background-color: aquamarine;
 }
