--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,6 +181,7 @@ main
 {
     width: 100%;
     height: 70vh;
+    overflow: auto;
     display: flex;
     flex-direction: column;
     gap: 1rem;
