--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,10 +105,18 @@ main
     text-overflow: ellipsis;
 }
 
-.info_last
+#last_msg_date
 {
     width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.info_last
+{
     text-align: end;
+    width: 100%;
 }
 
 .icons_set
