Utilizzo tasti up/down/enter nella lista contatti

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,10 +191,10 @@ main
     cursor: pointer;
 }
 
-.contact:hover
+/* .contact:hover
 {
     background-color: lightgray;
-}
+} */
 
 .contact.active
 {
