--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,6 @@
     /* VARIABILI DIMENSIONALI */
     --main_width            : 80vw;
     --main_height           : 85vh;
-    /* --width_friends_side    : 0;
-    --width_chat_side       : 0; */
-    /* VARIABILI CROMATICHE */
 }
 
 #web_app
@@ -49,16 +46,15 @@ main
 
 #friends_side
 {
-    /* flex-basis: calc(100% * var(--width_friends_side)); */
     background-color: whitesmoke;
 }
 
 #chat_side
 {
-    /* flex-basis: calc(100% * var(--width_chat_side)); */
     background-image: url(../img/mine.jpg);
 }
 
+/* Intestazioni delle macro aree (contatti e chat) */
 .section_header
 {
     display: flex;
@@ -93,8 +89,6 @@ main
     max-width: calc(80%);
     white-space: nowrap;
     overflow: hidden;
-    /* Ellipsis non funziona poichè necessita di width espressa in pixels */
-    /* text-overflow: ellipsis; */
 }
 
 .person_details span
@@ -190,11 +184,6 @@ main
     border: 1px solid gray;
     cursor: pointer;
 }
-
-/* .contact:hover
-{
-    background-color: lightgray;
-} */
 
 .contact.active
 {
